--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "prestart": "yarn build",
     "start": "node dist/index.js",
     "build": "babel ./app -d dist",
-    "dev": "babel-node ./app"
+    "dev": "babel-watch ./app"
   },
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.1",
+    "cors": "^2.8.3",
     "express": "^4.15.2",
     "mongoose": "^4.9.6"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-watch": "^2.0.6"
   }
 }
